--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 				</div>
 				<div class="sort-btn-wrap flex flex-col lg:flex-row gap-2 items-center w-full justify-center">
 					<div class="flex gap-3">
-						<button class="btn sort-btn">
-							<span class="btn-text" data-sort="up">Name</span>
+						<button class="btn sort-btn" data-btn-name="name">
+							<span class="btn-text" data-sort="">Name</span>
 						</button>
-						<button class="btn sort-btn">
-							<span class="btn-text" data-sort="down">Capital</span>
+						<button class="btn sort-btn" data-btn-name="capital">
+							<span class="btn-text" data-sort="">Capital</span>
 						</button>
-						<button class="btn sort-btn">
+						<button class="btn sort-btn" data-btn-name="population">
 							<span class="btn-text" data-sort="">Population</span>
 						</button>
 					</div>
-					<span class="sort-icon">
+					<span class="go-to-graph-btn">
 						<img src="./assets/chart.svg" class="h-12" />
 					</span>
 				</div>
@@ -46,58 +46,14 @@
 		</section>
 		<section class="bg-light-grey py-5 px-4 lg:px-24">
 			<div class="countries-wrap grid lg:grid-cols-7 gap-x-3 gap-y-2">
-				<div class="country-card w-full h-full bg-white py-4 px-4">
-					<img src="https://flagcdn.com/ae.svg" alt="" class="w-3/4 mx-auto">
-					<p class="country-name uppercase text-primary text-base font-semibold text-center mt-7 mb-4">Swaziland</p>
-					<div class="grid gap-[2px]">
-						<p class="text-base leading-4 text-gray-400">Capital: Lagos</p>
-						<p class="text-base leading-4 text-gray-400">Language: English</p>
-						<p class="text-base leading-4 text-gray-400">Population: 20,948,120</p>
-					</div>
-				</div>
-				<div class="country-card w-full h-full bg-white py-4 px-4">
-					<img src="https://flagcdn.com/ae.svg" alt="" class="w-3/4 mx-auto">
-					<p class="country-name uppercase text-primary text-base font-semibold text-center mt-7 mb-4">Swaziland</p>
-					<div class="grid gap-[2px]">
-						<p class="text-base leading-4 text-gray-400">Capital: Lagos</p>
-						<p class="text-base leading-4 text-gray-400">Language: English</p>
-						<p class="text-base leading-4 text-gray-400">Population: 20,948,120</p>
-					</div>
-				</div>
-				<div class="country-card w-full h-full bg-white py-4 px-4">
-					<img src="https://flagcdn.com/ae.svg" alt="" class="w-3/4 mx-auto">
-					<p class="country-name uppercase text-primary text-base font-semibold text-center mt-7 mb-4">Swaziland</p>
-					<div class="grid gap-[2px]">
-						<p class="text-base leading-4 text-gray-400">Capital: Lagos</p>
-						<p class="text-base leading-4 text-gray-400">Language: English</p>
-						<p class="text-base leading-4 text-gray-400">Population: 20,948,120</p>
-					</div>
-				</div>
-				<div class="country-card w-full h-full bg-white py-4 px-4">
-					<img src="https://flagcdn.com/ae.svg" alt="" class="w-3/4 mx-auto">
-					<p class="country-name uppercase text-primary text-base font-semibold text-center mt-7 mb-4">Swaziland</p>
-					<div class="grid gap-[2px]">
-						<p class="text-base leading-4 text-gray-400">Capital: Lagos</p>
-						<p class="text-base leading-4 text-gray-400">Language: English</p>
-						<p class="text-base leading-4 text-gray-400">Population: 20,948,120</p>
-					</div>
-				</div>
-				<div class="country-card w-full h-full bg-white py-4 px-4">
-					<img src="https://flagcdn.com/ae.svg" alt="" class="w-3/4 mx-auto">
-					<p class="country-name uppercase text-primary text-base font-semibold text-center mt-7 mb-4">Swaziland</p>
-					<div class="grid gap-[2px]">
-						<p class="text-base leading-4 text-gray-400">Capital: Lagos</p>
-						<p class="text-base leading-4 text-gray-400">Languages: English, Tamil, Yoruba, Mandarin, Greek</p>
-						<p class="text-base leading-4 text-gray-400">Population: 20,948,120</p>
-					</div>
-				</div>
+				
 			</div>
 		</section>
-		<section class="wrapper h-full grid grid-rows-[auto_1fr]">
+		<section class="wrapper graph-section grid grid-rows-[auto_1fr]">
 			<section class="bg-white pt-3 pb-2 grid gap-2">
 				<div class="graph-buttons flex items-center justify-center gap-2">
-					<button data-btn="population" class="population btn">Population</button>
-					<button data-btn="languages" class="languages btn">Languages</button>
+					<button data-btn="population" class="population btn graph-btn">Population</button>
+					<button data-btn="languages" class="languages btn graph-btn">Languages</button>
 				</div>
 				<h4 class="graph-title text-center"></h4>
 			</section>
