feat: filtering done and project complete

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<header id="countries" class="text-center grid gap-2 bg-light-grey py-3">
 		<h2 class="text-primary text-5xl font-semibold">World Countries Data</h2>
 		<p class="subtitle"></p>
-		<p class="search-summary"></p>
+		<p class="search-summary text-primary font-semibold italic"></p>
 	</header>
 	<main class="h-full">
 		<section>
@@ -22,7 +22,7 @@
 				<div class="w-full flex justify-center">
 					<input 
 						type="text" 
-						class="search w-full max-w-[800px] border border-gray-600 rounded-full py-3 px-4"
+						class="search-input w-full max-w-[800px] border border-gray-600 rounded-full py-3 px-4"
 						placeholder="Search countries by name, city and languages"
 					/>
 				</div>
